Add Konrad to AUTHORS and CONTRIBUTORS file

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,5 +3,6 @@
 # See the latter for an explanation.
 
 Akeda Bagus <akeda@x-team.com>
+Konrad Malawski <konrad.malawski@project13.pl>
 Google Inc.
 Quinn Slack <qslack@qslack.com>
