--- a/AUTHORS
+++ b/AUTHORS
@@ -7,3 +7,4 @@ Jameel Haffejee <RC1140@republiccommandos.co.za>
 Konrad Malawski <konrad.malawski@project13.pl>
 Google Inc.
 Quinn Slack <qslack@qslack.com>
+Stian Eikeland <stian@eikeland.se>
