--- a/AUTHORS
+++ b/AUTHORS
@@ -8,3 +8,4 @@ Konrad Malawski <konrad.malawski@project13.pl>
 Google Inc.
 Quinn Slack <qslack@qslack.com>
 Stian Eikeland <stian@eikeland.se>
+Yann Malet <yann.malet@gmail.com>
