add Arıl Bozoluk to AUTHORS and CONTRIBUTORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,6 +3,7 @@
 # See the latter for an explanation.
 
 Akeda Bagus <akeda@x-team.com>
+Arıl Bozoluk <arilbozoluk@hotmail.com>
 Beyang Liu <beyang.liu@gmail.com>
 Jameel Haffejee <RC1140@republiccommandos.co.za>
 Konrad Malawski <konrad.malawski@project13.pl>
