add Sean Wang as contributor

--- a/AUTHORS
+++ b/AUTHORS
@@ -9,5 +9,6 @@ Jameel Haffejee <RC1140@republiccommandos.co.za>
 Konrad Malawski <konrad.malawski@project13.pl>
 Google Inc.
 Quinn Slack <qslack@qslack.com>
+Sean Wang <sean@decrypted.org>
 Stian Eikeland <stian@eikeland.se>
 Yann Malet <yann.malet@gmail.com>
