--- a/AUTHORS
+++ b/AUTHORS
@@ -5,6 +5,7 @@
 Akeda Bagus <akeda@x-team.com>
 Arıl Bozoluk <arilbozoluk@hotmail.com>
 Beyang Liu <beyang.liu@gmail.com>
+Daniel Leavitt <daniel.leavitt@gmail.com>
 Jameel Haffejee <RC1140@republiccommandos.co.za>
 Konrad Malawski <konrad.malawski@project13.pl>
 Google Inc.
