add Shawn Smith as contributor

--- a/AUTHORS
+++ b/AUTHORS
@@ -11,5 +11,6 @@ Konrad Malawski <konrad.malawski@project13.pl>
 Google Inc.
 Quinn Slack <qslack@qslack.com>
 Sean Wang <sean@decrypted.org>
+Shawn Smith <shawnpsmith@gmail.com>
 Stian Eikeland <stian@eikeland.se>
 Yann Malet <yann.malet@gmail.com>
