--- a/AUTHORS
+++ b/AUTHORS
@@ -7,6 +7,7 @@ Arıl Bozoluk <arilbozoluk@hotmail.com>
 Beyang Liu <beyang.liu@gmail.com>
 Daniel Leavitt <daniel.leavitt@gmail.com>
 Jameel Haffejee <RC1140@republiccommandos.co.za>
+Justin Abrahms <justin@abrah.ms>
 Konrad Malawski <konrad.malawski@project13.pl>
 Google Inc.
 Quinn Slack <qslack@qslack.com>
