--- a/AUTHORS
+++ b/AUTHORS
@@ -3,6 +3,7 @@
 # See the latter for an explanation.
 
 Akeda Bagus <akeda@x-team.com>
+Alec Thomas <alec@swapoff.org>
 Arıl Bozoluk <arilbozoluk@hotmail.com>
 Beyang Liu <beyang.liu@gmail.com>
 Daniel Leavitt <daniel.leavitt@gmail.com>
