add Thomas Bruyelle as contributor

--- a/AUTHORS
+++ b/AUTHORS
@@ -15,4 +15,5 @@ Quinn Slack <qslack@qslack.com>
 Sean Wang <sean@decrypted.org>
 Shawn Smith <shawnpsmith@gmail.com>
 Stian Eikeland <stian@eikeland.se>
+Thomas Bruyelle <thomas.bruyelle@gmail.com>
 Yann Malet <yann.malet@gmail.com>
