add Amey Sakhadeo as contributor

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,6 +4,7 @@
 
 Akeda Bagus <akeda@x-team.com>
 Alec Thomas <alec@swapoff.org>
+Amey Sakhadeo <me@ameyms.com>
 Arıl Bozoluk <arilbozoluk@hotmail.com>
 Beyang Liu <beyang.liu@gmail.com>
 Daniel Leavitt <daniel.leavitt@gmail.com>
