--- a/AUTHORS
+++ b/AUTHORS
@@ -18,3 +18,4 @@ Shawn Smith <shawnpsmith@gmail.com>
 Stian Eikeland <stian@eikeland.se>
 Thomas Bruyelle <thomas.bruyelle@gmail.com>
 Yann Malet <yann.malet@gmail.com>
+Zach Latta <zach@zachlatta.com>
