--- a/AUTHORS
+++ b/AUTHORS
@@ -7,6 +7,7 @@ Alec Thomas <alec@swapoff.org>
 Amey Sakhadeo <me@ameyms.com>
 Arıl Bozoluk <arilbozoluk@hotmail.com>
 Beyang Liu <beyang.liu@gmail.com>
+Chris Schaefer <chris@dtzq.com>
 Daniel Leavitt <daniel.leavitt@gmail.com>
 Jameel Haffejee <RC1140@republiccommandos.co.za>
 Justin Abrahms <justin@abrah.ms>
