add Tobias Schmidt (of SoundCloud) as contributor

--- a/AUTHORS
+++ b/AUTHORS
@@ -18,6 +18,7 @@ Quinn Slack <qslack@qslack.com>
 Sean Wang <sean@decrypted.org>
 Shawn Smith <shawnpsmith@gmail.com>
 Stian Eikeland <stian@eikeland.se>
+SoundCloud, Ltd.
 Thomas Bruyelle <thomas.bruyelle@gmail.com>
 Yann Malet <yann.malet@gmail.com>
 Zach Latta <zach@zachlatta.com>
