--- a/AUTHORS
+++ b/AUTHORS
@@ -15,6 +15,7 @@ Konrad Malawski <konrad.malawski@project13.pl>
 Google Inc.
 Ondrej Kupka <ondra.cap@gmail.com>
 Quinn Slack <qslack@qslack.com>
+Sander van Harmelen <svanharmelen@schubergphilis.com>
 Sean Wang <sean@decrypted.org>
 Shawn Smith <shawnpsmith@gmail.com>
 Stian Eikeland <stian@eikeland.se>
