add Hari haran as a contributor

--- a/AUTHORS
+++ b/AUTHORS
@@ -9,10 +9,11 @@ Arıl Bozoluk <arilbozoluk@hotmail.com>
 Beyang Liu <beyang.liu@gmail.com>
 Chris Schaefer <chris@dtzq.com>
 Daniel Leavitt <daniel.leavitt@gmail.com>
+Google Inc.
+Hari haran <hariharan.uno@gmail.com>
 Jameel Haffejee <RC1140@republiccommandos.co.za>
 Justin Abrahms <justin@abrah.ms>
 Konrad Malawski <konrad.malawski@project13.pl>
-Google Inc.
 Ondrej Kupka <ondra.cap@gmail.com>
 Quinn Slack <qslack@qslack.com>
 Sander van Harmelen <svanharmelen@schubergphilis.com>
