add Trey Tacon as contributor

--- a/AUTHORS
+++ b/AUTHORS
@@ -22,5 +22,6 @@ Shawn Smith <shawnpsmith@gmail.com>
 Stian Eikeland <stian@eikeland.se>
 SoundCloud, Ltd.
 Thomas Bruyelle <thomas.bruyelle@gmail.com>
+Trey Tacon <ttacon@gmail.com>
 Yann Malet <yann.malet@gmail.com>
 Zach Latta <zach@zachlatta.com>
