add Krzysztof Kowalczyk as contributor

--- a/AUTHORS
+++ b/AUTHORS
@@ -14,6 +14,7 @@ Hari haran <hariharan.uno@gmail.com>
 Jameel Haffejee <RC1140@republiccommandos.co.za>
 Justin Abrahms <justin@abrah.ms>
 Konrad Malawski <konrad.malawski@project13.pl>
+Krzysztof Kowalczyk <kkowalczyk@gmail.com>
 Ondrej Kupka <ondra.cap@gmail.com>
 Quinn Slack <qslack@qslack.com>
 Sander van Harmelen <svanharmelen@schubergphilis.com>
