--- a/AUTHORS
+++ b/AUTHORS
@@ -10,6 +10,7 @@ Beyang Liu <beyang.liu@gmail.com>
 Chris Schaefer <chris@dtzq.com>
 Daniel Leavitt <daniel.leavitt@gmail.com>
 Google Inc.
+Guz Alexander <kalimatas@gmail.com>
 Hari haran <hariharan.uno@gmail.com>
 Jameel Haffejee <RC1140@republiccommandos.co.za>
 Justin Abrahms <justin@abrah.ms>
