add Piotr Zurek as contributor

--- a/AUTHORS
+++ b/AUTHORS
@@ -17,6 +17,7 @@ Justin Abrahms <justin@abrah.ms>
 Konrad Malawski <konrad.malawski@project13.pl>
 Krzysztof Kowalczyk <kkowalczyk@gmail.com>
 Ondrej Kupka <ondra.cap@gmail.com>
+Piotr Zurek <p.zurek@gmail.com>
 Quinn Slack <qslack@qslack.com>
 Sander van Harmelen <svanharmelen@schubergphilis.com>
 Sean Wang <sean@decrypted.org>
