--- a/AUTHORS
+++ b/AUTHORS
@@ -9,6 +9,7 @@ Arıl Bozoluk <arilbozoluk@hotmail.com>
 Beyang Liu <beyang.liu@gmail.com>
 Chris Schaefer <chris@dtzq.com>
 Daniel Leavitt <daniel.leavitt@gmail.com>
+Diego Lapiduz <diego.lapiduz@cfpb.gov>
 Google Inc.
 Guz Alexander <kalimatas@gmail.com>
 Hari haran <hariharan.uno@gmail.com>
