--- a/AUTHORS
+++ b/AUTHORS
@@ -20,6 +20,7 @@ Krzysztof Kowalczyk <kkowalczyk@gmail.com>
 Ondrej Kupka <ondra.cap@gmail.com>
 Piotr Zurek <p.zurek@gmail.com>
 Quinn Slack <qslack@qslack.com>
+Rackspace US, Inc.
 Sander van Harmelen <svanharmelen@schubergphilis.com>
 Sean Wang <sean@decrypted.org>
 Shawn Smith <shawnpsmith@gmail.com>
