--- a/AUTHORS
+++ b/AUTHORS
@@ -10,6 +10,7 @@ Beyang Liu <beyang.liu@gmail.com>
 Chris Schaefer <chris@dtzq.com>
 Daniel Leavitt <daniel.leavitt@gmail.com>
 Diego Lapiduz <diego.lapiduz@cfpb.gov>
+Dmitri Shuralyov <shurcooL@gmail.com>
 Google Inc.
 Guz Alexander <kalimatas@gmail.com>
 Hari haran <hariharan.uno@gmail.com>
