--- a/AUTHORS
+++ b/AUTHORS
@@ -8,6 +8,7 @@ Amey Sakhadeo <me@ameyms.com>
 Arıl Bozoluk <arilbozoluk@hotmail.com>
 Beyang Liu <beyang.liu@gmail.com>
 Chris Schaefer <chris@dtzq.com>
+Colin Misare <github.com/cmisare>
 Daniel Leavitt <daniel.leavitt@gmail.com>
 Diego Lapiduz <diego.lapiduz@cfpb.gov>
 Dmitri Shuralyov <shurcooL@gmail.com>
