add Matt Landis as contributor

--- a/AUTHORS
+++ b/AUTHORS
@@ -20,6 +20,7 @@ Justin Abrahms <justin@abrah.ms>
 Konrad Malawski <konrad.malawski@project13.pl>
 Krzysztof Kowalczyk <kkowalczyk@gmail.com>
 Maksim Zhylinski <uzzable@gmail.com>
+Matt Landis <landis.matt@gmail.com>
 Ondrej Kupka <ondra.cap@gmail.com>
 Piotr Zurek <p.zurek@gmail.com>
 Quinn Slack <qslack@qslack.com>
