--- a/AUTHORS
+++ b/AUTHORS
@@ -25,6 +25,7 @@ Ondrej Kupka <ondra.cap@gmail.com>
 Piotr Zurek <p.zurek@gmail.com>
 Quinn Slack <qslack@qslack.com>
 Rackspace US, Inc.
+Rob Figueiredo <robfig@yext.com>
 Sander van Harmelen <svanharmelen@schubergphilis.com>
 Sean Wang <sean@decrypted.org>
 Shawn Smith <shawnpsmith@gmail.com>
