--- a/AUTHORS
+++ b/AUTHORS
@@ -7,6 +7,7 @@ Alec Thomas <alec@swapoff.org>
 Amey Sakhadeo <me@ameyms.com>
 Arıl Bozoluk <arilbozoluk@hotmail.com>
 Beyang Liu <beyang.liu@gmail.com>
+Charlie Yan <charlieyan08@gmail.com>
 Chris Schaefer <chris@dtzq.com>
 Colin Misare <github.com/cmisare>
 Daniel Leavitt <daniel.leavitt@gmail.com>
