--- a/AUTHORS
+++ b/AUTHORS
@@ -21,6 +21,7 @@ Justin Abrahms <justin@abrah.ms>
 Konrad Malawski <konrad.malawski@project13.pl>
 Krzysztof Kowalczyk <kkowalczyk@gmail.com>
 Maksim Zhylinski <uzzable@gmail.com>
+Martin-Louis Bright <mlbright@gmail.com>
 Mat Geist <matgeist@gmail.com>
 Matt Landis <landis.matt@gmail.com>
 Ondrej Kupka <ondra.cap@gmail.com>
