add William Bailey as contributor

--- a/AUTHORS
+++ b/AUTHORS
@@ -36,5 +36,6 @@ Stian Eikeland <stian@eikeland.se>
 SoundCloud, Ltd.
 Thomas Bruyelle <thomas.bruyelle@gmail.com>
 Trey Tacon <ttacon@gmail.com>
+William Bailey <mail@williambailey.org.uk>
 Yann Malet <yann.malet@gmail.com>
 Zach Latta <zach@zachlatta.com>
