--- a/AUTHORS
+++ b/AUTHORS
@@ -10,6 +10,7 @@ Beyang Liu <beyang.liu@gmail.com>
 Charlie Yan <charlieyan08@gmail.com>
 Chris Schaefer <chris@dtzq.com>
 Colin Misare <github.com/cmisare>
+Cristian Maglie <c.maglie@bug.st>
 Daniel Leavitt <daniel.leavitt@gmail.com>
 Diego Lapiduz <diego.lapiduz@cfpb.gov>
 Dmitri Shuralyov <shurcooL@gmail.com>
@@ -32,8 +33,8 @@ Rob Figueiredo <robfig@yext.com>
 Sander van Harmelen <svanharmelen@schubergphilis.com>
 Sean Wang <sean@decrypted.org>
 Shawn Smith <shawnpsmith@gmail.com>
-Stian Eikeland <stian@eikeland.se>
 SoundCloud, Ltd.
+Stian Eikeland <stian@eikeland.se>
 Thomas Bruyelle <thomas.bruyelle@gmail.com>
 Trey Tacon <ttacon@gmail.com>
 William Bailey <mail@williambailey.org.uk>
