--- a/AUTHORS
+++ b/AUTHORS
@@ -21,6 +21,7 @@ Jameel Haffejee <RC1140@republiccommandos.co.za>
 Justin Abrahms <justin@abrah.ms>
 Konrad Malawski <konrad.malawski@project13.pl>
 Krzysztof Kowalczyk <kkowalczyk@gmail.com>
+kyokomi <kyoko1220adword@gmail.com>
 Maksim Zhylinski <uzzable@gmail.com>
 Martin-Louis Bright <mlbright@gmail.com>
 Mat Geist <matgeist@gmail.com>
