add Michael Tiller as contributor

--- a/AUTHORS
+++ b/AUTHORS
@@ -27,6 +27,7 @@ Maksim Zhylinski <uzzable@gmail.com>
 Martin-Louis Bright <mlbright@gmail.com>
 Mat Geist <matgeist@gmail.com>
 Matt Landis <landis.matt@gmail.com>
+Michael Tiller <michael.tiller@gmail.com>
 Ondrej Kupka <ondra.cap@gmail.com>
 Piotr Zurek <p.zurek@gmail.com>
 Quinn Slack <qslack@qslack.com>
