--- a/AUTHORS
+++ b/AUTHORS
@@ -15,6 +15,7 @@ Cristian Maglie <c.maglie@bug.st>
 Daniel Leavitt <daniel.leavitt@gmail.com>
 Diego Lapiduz <diego.lapiduz@cfpb.gov>
 Dmitri Shuralyov <shurcooL@gmail.com>
+Fredrik Jönsson <fredrik.jonsson@izettle.com>
 Google Inc.
 Guz Alexander <kalimatas@gmail.com>
 Hari haran <hariharan.uno@gmail.com>
