add Ryan Lower as contributor

--- a/AUTHORS
+++ b/AUTHORS
@@ -34,6 +34,7 @@ Piotr Zurek <p.zurek@gmail.com>
 Quinn Slack <qslack@qslack.com>
 Rackspace US, Inc.
 Rob Figueiredo <robfig@yext.com>
+Ryan Lower <rpjlower@gmail.com>
 Sander van Harmelen <svanharmelen@schubergphilis.com>
 Sean Wang <sean@decrypted.org>
 Shawn Smith <shawnpsmith@gmail.com>
