add Andreas Garnæs as contributor

--- a/AUTHORS
+++ b/AUTHORS
@@ -5,6 +5,7 @@
 Akeda Bagus <akeda@x-team.com>
 Alec Thomas <alec@swapoff.org>
 Amey Sakhadeo <me@ameyms.com>
+Andreas Garnæs <https://github.com/andreas>
 Arıl Bozoluk <arilbozoluk@hotmail.com>
 Beyang Liu <beyang.liu@gmail.com>
 Brian Egizi <brian@mojotech.com>
