add Austin Dizzy as contributor

--- a/AUTHORS
+++ b/AUTHORS
@@ -7,6 +7,7 @@ Alec Thomas <alec@swapoff.org>
 Amey Sakhadeo <me@ameyms.com>
 Andreas Garnæs <https://github.com/andreas>
 Arıl Bozoluk <arilbozoluk@hotmail.com>
+Austin Dizzy <dizzy@wow.com>
 Beyang Liu <beyang.liu@gmail.com>
 Brian Egizi <brian@mojotech.com>
 Charlie Yan <charlieyan08@gmail.com>
