--- a/AUTHORS
+++ b/AUTHORS
@@ -33,6 +33,7 @@ Mat Geist <matgeist@gmail.com>
 Matt Landis <landis.matt@gmail.com>
 Michael Tiller <michael.tiller@gmail.com>
 Ondrej Kupka <ondra.cap@gmail.com>
+Parker Moore <parkrmoore@gmail.com>
 Piotr Zurek <p.zurek@gmail.com>
 Quinn Slack <qslack@qslack.com>
 Rackspace US, Inc.
