add Victor Castell as contributor

--- a/AUTHORS
+++ b/AUTHORS
@@ -46,6 +46,7 @@ SoundCloud, Ltd.
 Stian Eikeland <stian@eikeland.se>
 Thomas Bruyelle <thomas.bruyelle@gmail.com>
 Trey Tacon <ttacon@gmail.com>
+Victor Castell <victor@victorcastell.com>
 William Bailey <mail@williambailey.org.uk>
 Yann Malet <yann.malet@gmail.com>
 Zach Latta <zach@zachlatta.com>
