--- a/AUTHORS
+++ b/AUTHORS
@@ -38,6 +38,7 @@ Piotr Zurek <p.zurek@gmail.com>
 Quinn Slack <qslack@qslack.com>
 Rackspace US, Inc.
 Rob Figueiredo <robfig@yext.com>
+Ruben Vereecken <rubenvereecken@gmail.com>
 Ryan Lower <rpjlower@gmail.com>
 Sander van Harmelen <svanharmelen@schubergphilis.com>
 Sean Wang <sean@decrypted.org>
