--- a/AUTHORS
+++ b/AUTHORS
@@ -13,6 +13,7 @@ Brian Egizi <brian@mojotech.com>
 Charlie Yan <charlieyan08@gmail.com>
 Chris Schaefer <chris@dtzq.com>
 Colin Misare <github.com/cmisare>
+Craig Peterson <cpeterson@stackoverflow.com>
 Cristian Maglie <c.maglie@bug.st>
 Daniel Leavitt <daniel.leavitt@gmail.com>
 Diego Lapiduz <diego.lapiduz@cfpb.gov>
