add Alexander Harkness as contributor

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,6 +4,7 @@
 
 Akeda Bagus <akeda@x-team.com>
 Alec Thomas <alec@swapoff.org>
+Alexander Harkness <me@bearbin.net>
 Amey Sakhadeo <me@ameyms.com>
 Andreas Garnæs <https://github.com/andreas>
 Arıl Bozoluk <arilbozoluk@hotmail.com>
