add i2bskn as contributor

--- a/AUTHORS
+++ b/AUTHORS
@@ -24,6 +24,7 @@ Fredrik Jönsson <fredrik.jonsson@izettle.com>
 Google Inc.
 Guz Alexander <kalimatas@gmail.com>
 Hari haran <hariharan.uno@gmail.com>
+i2bskn <i2bskn@gmail.com>
 Jameel Haffejee <RC1140@republiccommandos.co.za>
 Justin Abrahms <justin@abrah.ms>
 Konrad Malawski <konrad.malawski@project13.pl>
