add Doug Turner as contributor

--- a/AUTHORS
+++ b/AUTHORS
@@ -20,6 +20,7 @@ Daniel Leavitt <daniel.leavitt@gmail.com>
 Diego Lapiduz <diego.lapiduz@cfpb.gov>
 Dmitri Shuralyov <shurcooL@gmail.com>
 dmnlk <seikima2demon@gmail.com>
+Doug Turner <doug.turner@gmail.com>
 Fredrik Jönsson <fredrik.jonsson@izettle.com>
 Google Inc.
 Guz Alexander <kalimatas@gmail.com>
