--- a/AUTHORS
+++ b/AUTHORS
@@ -27,6 +27,7 @@ Guz Alexander <kalimatas@gmail.com>
 Hari haran <hariharan.uno@gmail.com>
 i2bskn <i2bskn@gmail.com>
 Jameel Haffejee <RC1140@republiccommandos.co.za>
+Jihoon Chung <j.c@navercorp.com>
 Justin Abrahms <justin@abrah.ms>
 Konrad Malawski <konrad.malawski@project13.pl>
 Krzysztof Kowalczyk <kkowalczyk@gmail.com>
