add Yicheng Qin as contributor

--- a/AUTHORS
+++ b/AUTHORS
@@ -57,4 +57,5 @@ Trey Tacon <ttacon@gmail.com>
 Victor Castell <victor@victorcastell.com>
 William Bailey <mail@williambailey.org.uk>
 Yann Malet <yann.malet@gmail.com>
+Yicheng Qin <qycqycqycqycqyc@gmail.com>
 Zach Latta <zach@zachlatta.com>
