--- a/AUTHORS
+++ b/AUTHORS
@@ -21,6 +21,7 @@ Diego Lapiduz <diego.lapiduz@cfpb.gov>
 Dmitri Shuralyov <shurcooL@gmail.com>
 dmnlk <seikima2demon@gmail.com>
 Doug Turner <doug.turner@gmail.com>
+erwinvaneyk <erwinvaneyk@gmail.com>
 Francis <hello@francismakes.com>
 Fredrik Jönsson <fredrik.jonsson@izettle.com>
 Google Inc.
