add Cami Diez as contributor

--- a/AUTHORS
+++ b/AUTHORS
@@ -11,6 +11,7 @@ Arıl Bozoluk <arilbozoluk@hotmail.com>
 Austin Dizzy <dizzy@wow.com>
 Beyang Liu <beyang.liu@gmail.com>
 Brian Egizi <brian@mojotech.com>
+Cami Diez <diezcami@gmail.com>
 Charlie Yan <charlieyan08@gmail.com>
 Chris Schaefer <chris@dtzq.com>
 Colin Misare <github.com/cmisare>
