add Maxime Bury as contributor

--- a/AUTHORS
+++ b/AUTHORS
@@ -39,6 +39,7 @@ Maksim Zhylinski <uzzable@gmail.com>
 Martin-Louis Bright <mlbright@gmail.com>
 Mat Geist <matgeist@gmail.com>
 Matt Landis <landis.matt@gmail.com>
+Maxime Bury <maxime.bury@gmail.com>
 Michael Tiller <michael.tiller@gmail.com>
 Ondrej Kupka <ondra.cap@gmail.com>
 Panagiotis Moustafellos <pmoust@gmail.com>
