--- a/AUTHORS
+++ b/AUTHORS
@@ -48,6 +48,7 @@ Parker Moore <parkrmoore@gmail.com>
 Piotr Zurek <p.zurek@gmail.com>
 Quinn Slack <qslack@qslack.com>
 Rackspace US, Inc.
+Red Hat, Inc.
 Rob Figueiredo <robfig@yext.com>
 Ruben Vereecken <rubenvereecken@gmail.com>
 Ryan Lower <rpjlower@gmail.com>
