add sona-tar as contributor

--- a/AUTHORS
+++ b/AUTHORS
@@ -55,6 +55,7 @@ Ryan Lower <rpjlower@gmail.com>
 Sander van Harmelen <svanharmelen@schubergphilis.com>
 Sean Wang <sean@decrypted.org>
 Shawn Smith <shawnpsmith@gmail.com>
+sona-tar <sona.zip@gmail.com>
 SoundCloud, Ltd.
 Stian Eikeland <stian@eikeland.se>
 Thomas Bruyelle <thomas.bruyelle@gmail.com>
