--- a/AUTHORS
+++ b/AUTHORS
@@ -10,6 +10,7 @@ Andreas Garnæs <https://github.com/andreas>
 Arıl Bozoluk <arilbozoluk@hotmail.com>
 Austin Dizzy <dizzy@wow.com>
 Beyang Liu <beyang.liu@gmail.com>
+Björn Häuser <b.haeuser@rebuy.de>
 Brad Harris <bmharris@gmail.com>
 Brian Egizi <brian@mojotech.com>
 Cami Diez <diezcami@gmail.com>
