add griffin_stewie as contributor

--- a/AUTHORS
+++ b/AUTHORS
@@ -28,6 +28,7 @@ erwinvaneyk <erwinvaneyk@gmail.com>
 Francis <hello@francismakes.com>
 Fredrik Jönsson <fredrik.jonsson@izettle.com>
 Google Inc.
+griffin_stewie <panterathefamilyguy@gmail.com>
 Guz Alexander <kalimatas@gmail.com>
 Hari haran <hariharan.uno@gmail.com>
 i2bskn <i2bskn@gmail.com>
