add John Engelman as contributor

--- a/AUTHORS
+++ b/AUTHORS
@@ -34,6 +34,7 @@ Hari haran <hariharan.uno@gmail.com>
 i2bskn <i2bskn@gmail.com>
 Jameel Haffejee <RC1140@republiccommandos.co.za>
 Jihoon Chung <j.c@navercorp.com>
+John Engelman <john.r.engelman@gmail.com>
 Justin Abrahms <justin@abrah.ms>
 Konrad Malawski <konrad.malawski@project13.pl>
 Krzysztof Kowalczyk <kkowalczyk@gmail.com>
