add Julien Rostand as contributor

--- a/AUTHORS
+++ b/AUTHORS
@@ -35,6 +35,7 @@ i2bskn <i2bskn@gmail.com>
 Jameel Haffejee <RC1140@republiccommandos.co.za>
 Jihoon Chung <j.c@navercorp.com>
 John Engelman <john.r.engelman@gmail.com>
+Julien Rostand <jrostand@users.noreply.github.com>
 Justin Abrahms <justin@abrah.ms>
 Konrad Malawski <konrad.malawski@project13.pl>
 Krzysztof Kowalczyk <kkowalczyk@gmail.com>
