--- a/AUTHORS
+++ b/AUTHORS
@@ -56,6 +56,7 @@ Red Hat, Inc.
 Rob Figueiredo <robfig@yext.com>
 Ruben Vereecken <rubenvereecken@gmail.com>
 Ryan Lower <rpjlower@gmail.com>
+saisi <saisi@users.noreply.github.com>
 Sander van Harmelen <svanharmelen@schubergphilis.com>
 Sean Wang <sean@decrypted.org>
 Shawn Smith <shawnpsmith@gmail.com>
