add Pierre Carrier as contributor

--- a/AUTHORS
+++ b/AUTHORS
@@ -49,6 +49,7 @@ Michael Tiller <michael.tiller@gmail.com>
 Ondrej Kupka <ondra.cap@gmail.com>
 Panagiotis Moustafellos <pmoust@gmail.com>
 Parker Moore <parkrmoore@gmail.com>
+Pierre Carrier <pierre@meteor.com>
 Piotr Zurek <p.zurek@gmail.com>
 Quinn Slack <qslack@qslack.com>
 Rackspace US, Inc.
