--- a/AUTHORS
+++ b/AUTHORS
@@ -40,6 +40,7 @@ Justin Abrahms <justin@abrah.ms>
 Konrad Malawski <konrad.malawski@project13.pl>
 Krzysztof Kowalczyk <kkowalczyk@gmail.com>
 kyokomi <kyoko1220adword@gmail.com>
+Luke Roberts <email@luke-roberts.co.uk>
 Maksim Zhylinski <uzzable@gmail.com>
 Martin-Louis Bright <mlbright@gmail.com>
 Mat Geist <matgeist@gmail.com>
