add Isao Jonas as contributor
Change-Id: Ic6c776632587436d8b2a7810521f1a5ca1eae815

--- a/AUTHORS
+++ b/AUTHORS
@@ -32,6 +32,7 @@ griffin_stewie <panterathefamilyguy@gmail.com>
 Guz Alexander <kalimatas@gmail.com>
 Hari haran <hariharan.uno@gmail.com>
 i2bskn <i2bskn@gmail.com>
+Isao Jonas <isao.jonas@gmail.com>
 Jameel Haffejee <RC1140@republiccommandos.co.za>
 Jihoon Chung <j.c@navercorp.com>
 John Engelman <john.r.engelman@gmail.com>
