--- a/AUTHORS
+++ b/AUTHORS
@@ -25,6 +25,7 @@ Dmitri Shuralyov <shurcooL@gmail.com>
 dmnlk <seikima2demon@gmail.com>
 Doug Turner <doug.turner@gmail.com>
 erwinvaneyk <erwinvaneyk@gmail.com>
+Filippo Valsorda <hi@filippo.io>
 Francis <hello@francismakes.com>
 Fredrik Jönsson <fredrik.jonsson@izettle.com>
 Google Inc.
