add Georgy Buranov as contributor

--- a/AUTHORS
+++ b/AUTHORS
@@ -28,6 +28,7 @@ erwinvaneyk <erwinvaneyk@gmail.com>
 Filippo Valsorda <hi@filippo.io>
 Francis <hello@francismakes.com>
 Fredrik Jönsson <fredrik.jonsson@izettle.com>
+Georgy Buranov <gburanov@gmail.com>
 Google Inc.
 griffin_stewie <panterathefamilyguy@gmail.com>
 Guz Alexander <kalimatas@gmail.com>
