add Neil O'Toole as contributor

--- a/AUTHORS
+++ b/AUTHORS
@@ -51,6 +51,7 @@ Mat Geist <matgeist@gmail.com>
 Matt Landis <landis.matt@gmail.com>
 Maxime Bury <maxime.bury@gmail.com>
 Michael Tiller <michael.tiller@gmail.com>
+Neil O'Toole <neilotoole@apache.org>
 Ondrej Kupka <ondra.cap@gmail.com>
 Panagiotis Moustafellos <pmoust@gmail.com>
 Parker Moore <parkrmoore@gmail.com>
