--- a/AUTHORS
+++ b/AUTHORS
@@ -7,6 +7,7 @@ Alec Thomas <alec@swapoff.org>
 Alexander Harkness <me@bearbin.net>
 Amey Sakhadeo <me@ameyms.com>
 Andreas Garnæs <https://github.com/andreas>
+Andrew Ryabchun <aryabchun@mail.ua>
 Arıl Bozoluk <arilbozoluk@hotmail.com>
 Austin Dizzy <dizzy@wow.com>
 Beyang Liu <beyang.liu@gmail.com>
