add Hanno Hecker as contributor
Change-Id: I9e38d504ecfcad14c676af92049a24b457cff638

--- a/AUTHORS
+++ b/AUTHORS
@@ -33,6 +33,7 @@ Georgy Buranov <gburanov@gmail.com>
 Google Inc.
 griffin_stewie <panterathefamilyguy@gmail.com>
 Guz Alexander <kalimatas@gmail.com>
+Hanno Hecker <hanno.hecker@zalando.de>
 Hari haran <hariharan.uno@gmail.com>
 i2bskn <i2bskn@gmail.com>
 Isao Jonas <isao.jonas@gmail.com>
