add Chris Roche as contributor
Change-Id: I80d91c044307a82f8707b802fd4b0c081fc96869

--- a/AUTHORS
+++ b/AUTHORS
@@ -16,6 +16,7 @@ Brad Harris <bmharris@gmail.com>
 Brian Egizi <brian@mojotech.com>
 Cami Diez <diezcami@gmail.com>
 Charlie Yan <charlieyan08@gmail.com>
+Chris Roche <chris@vsco.co>
 Chris Schaefer <chris@dtzq.com>
 Colin Misare <github.com/cmisare>
 Craig Peterson <cpeterson@stackoverflow.com>
