--- a/AUTHORS
+++ b/AUTHORS
@@ -30,6 +30,7 @@ erwinvaneyk <erwinvaneyk@gmail.com>
 Filippo Valsorda <hi@filippo.io>
 Francis <hello@francismakes.com>
 Fredrik Jönsson <fredrik.jonsson@izettle.com>
+Garrett Squire <garrettsquire@gmail.com>
 Georgy Buranov <gburanov@gmail.com>
 Google Inc.
 griffin_stewie <panterathefamilyguy@gmail.com>
