add Ainsley Chong as contributor
Change-Id: Ibc5ca9d03412dff2940b3b343b271392791efe18

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,6 +2,7 @@
 # This file is distinct from the CONTRIBUTORS files.
 # See the latter for an explanation.
 
+Ainsley Chong <ainsley.chong@gmail.com>
 Akeda Bagus <akeda@x-team.com>
 Alec Thomas <alec@swapoff.org>
 Alexander Harkness <me@bearbin.net>
