add Beshr Kayali as contributor
Change-Id: I6091efa31c267f2f71d519cb1f7901ad63500ec8

--- a/AUTHORS
+++ b/AUTHORS
@@ -11,6 +11,7 @@ Andreas Garnæs <https://github.com/andreas>
 Andrew Ryabchun <aryabchun@mail.ua>
 Arıl Bozoluk <arilbozoluk@hotmail.com>
 Austin Dizzy <dizzy@wow.com>
+Beshr Kayali <beshrkayali@gmail.com>
 Beyang Liu <beyang.liu@gmail.com>
 Björn Häuser <b.haeuser@rebuy.de>
 Brad Harris <bmharris@gmail.com>
