add Yannick Utard as contributor
Change-Id: I8ba9587109cecf9ba5cb64efa20e58ecb1c7bfe0

--- a/AUTHORS
+++ b/AUTHORS
@@ -81,5 +81,6 @@ Trey Tacon <ttacon@gmail.com>
 Victor Castell <victor@victorcastell.com>
 William Bailey <mail@williambailey.org.uk>
 Yann Malet <yann.malet@gmail.com>
+Yannick Utard <yannickutard@gmail.com>
 Yicheng Qin <qycqycqycqycqyc@gmail.com>
 Zach Latta <zach@zachlatta.com>
