add Carlos Alexandro Becker as contributor
Change-Id: I9668e8806934438062bac3f34e4759d44b5f63f4

--- a/AUTHORS
+++ b/AUTHORS
@@ -17,6 +17,7 @@ Björn Häuser <b.haeuser@rebuy.de>
 Brad Harris <bmharris@gmail.com>
 Brian Egizi <brian@mojotech.com>
 Cami Diez <diezcami@gmail.com>
+Carlos Alexandro Becker <caarlos0@gmail.com>
 Charlie Yan <charlieyan08@gmail.com>
 Chris Roche <chris@vsco.co>
 Chris Schaefer <chris@dtzq.com>
