--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,12 @@
 # This is the official list of go-github authors for copyright purposes.
-# This file is distinct from the CONTRIBUTORS files.
-# See the latter for an explanation.
+#
+# This does not necessarily list everyone who has contributed code, since in
+# some cases, their employer may be the copyright holder. To see the full list
+# of contributors, see the revision history in source control or
+# https://github.com/google/go-github/graphs/contributors.
+#
+# Authors who wish to be recognized in this file should add themselves (or
+# their employer, as appropriate).
 
 Ainsley Chong <ainsley.chong@gmail.com>
 Akeda Bagus <akeda@x-team.com>
