add Huy Tr as author
Change-Id: I17b9482ac3c49af59b6d0b662a6e7d720073651d

--- a/AUTHORS
+++ b/AUTHORS
@@ -46,6 +46,7 @@ griffin_stewie <panterathefamilyguy@gmail.com>
 Guz Alexander <kalimatas@gmail.com>
 Hanno Hecker <hanno.hecker@zalando.de>
 Hari haran <hariharan.uno@gmail.com>
+Huy Tr <kingbazoka@gmail.com>
 i2bskn <i2bskn@gmail.com>
 Isao Jonas <isao.jonas@gmail.com>
 Jameel Haffejee <RC1140@republiccommandos.co.za>
