add Juan Basso as author
Change-Id: I9a984b191e75fcd9e9fc3ca4ac563100464b9845

--- a/AUTHORS
+++ b/AUTHORS
@@ -52,6 +52,7 @@ Isao Jonas <isao.jonas@gmail.com>
 Jameel Haffejee <RC1140@republiccommandos.co.za>
 Jihoon Chung <j.c@navercorp.com>
 John Engelman <john.r.engelman@gmail.com>
+Juan Basso <jrbasso@gmail.com>
 Julien Rostand <jrostand@users.noreply.github.com>
 Justin Abrahms <justin@abrah.ms>
 Konrad Malawski <konrad.malawski@project13.pl>
