--- a/AUTHORS
+++ b/AUTHORS
@@ -31,6 +31,7 @@ Colin Misare <github.com/cmisare>
 Craig Peterson <cpeterson@stackoverflow.com>
 Cristian Maglie <c.maglie@bug.st>
 Daniel Leavitt <daniel.leavitt@gmail.com>
+Dave Henderson <dhenderson@gmail.com>
 Diego Lapiduz <diego.lapiduz@cfpb.gov>
 Dmitri Shuralyov <shurcooL@gmail.com>
 dmnlk <seikima2demon@gmail.com>
