Update AUTHORS file
Change-Id: Iba31c9762d66cf42198009fcf7ae074211679d1a

--- a/AUTHORS
+++ b/AUTHORS
@@ -11,19 +11,25 @@
 Ainsley Chong <ainsley.chong@gmail.com>
 Akeda Bagus <akeda@x-team.com>
 Alec Thomas <alec@swapoff.org>
+Alex Bramley <a.bramley@gmail.com>
 Alexander Harkness <me@bearbin.net>
 Amey Sakhadeo <me@ameyms.com>
 Andreas Garnæs <https://github.com/andreas>
 Andrew Ryabchun <aryabchun@mail.ua>
+Anshuman Bhartiya <anshuman.bhartiya@gmail.com>
 Arıl Bozoluk <arilbozoluk@hotmail.com>
 Austin Dizzy <dizzy@wow.com>
 Beshr Kayali <beshrkayali@gmail.com>
 Beyang Liu <beyang.liu@gmail.com>
+Billy Lynch <wlynch92@gmail.com>
 Björn Häuser <b.haeuser@rebuy.de>
 Brad Harris <bmharris@gmail.com>
+Bradley Falzon <brad@teambrad.net>
 Brian Egizi <brian@mojotech.com>
+Bryan Boreham <bryan@weave.works>
 Cami Diez <diezcami@gmail.com>
 Carlos Alexandro Becker <caarlos0@gmail.com>
+chandresh-pancholi <chandreshpancholi007@gmail.com>
 Charlie Yan <charlieyan08@gmail.com>
 Chris Roche <chris@vsco.co>
 Chris Schaefer <chris@dtzq.com>
@@ -32,11 +38,14 @@ Craig Peterson <cpeterson@stackoverflow.com>
 Cristian Maglie <c.maglie@bug.st>
 Daniel Leavitt <daniel.leavitt@gmail.com>
 Dave Henderson <dhenderson@gmail.com>
+David Deng <daviddengcn@gmail.com>
 Diego Lapiduz <diego.lapiduz@cfpb.gov>
 Dmitri Shuralyov <shurcooL@gmail.com>
 dmnlk <seikima2demon@gmail.com>
+Don Petersen <don@donpetersen.net>
 Doug Turner <doug.turner@gmail.com>
 erwinvaneyk <erwinvaneyk@gmail.com>
+Fabrice <fabrice.vaillant@student.ecp.fr>
 Filippo Valsorda <hi@filippo.io>
 Francis <hello@francismakes.com>
 Fredrik Jönsson <fredrik.jonsson@izettle.com>
@@ -52,6 +61,7 @@ i2bskn <i2bskn@gmail.com>
 Isao Jonas <isao.jonas@gmail.com>
 Jameel Haffejee <RC1140@republiccommandos.co.za>
 Jihoon Chung <j.c@navercorp.com>
+Joe Tsai <joetsai@digital-static.net>
 John Engelman <john.r.engelman@gmail.com>
 Juan Basso <jrbasso@gmail.com>
 Julien Rostand <jrostand@users.noreply.github.com>
@@ -61,20 +71,24 @@ Krzysztof Kowalczyk <kkowalczyk@gmail.com>
 kyokomi <kyoko1220adword@gmail.com>
 Luke Evers <me@lukevers.com>
 Luke Roberts <email@luke-roberts.co.uk>
+Luke Young <luke@hydrantlabs.org>
 Maksim Zhylinski <uzzable@gmail.com>
 Martin-Louis Bright <mlbright@gmail.com>
 Mat Geist <matgeist@gmail.com>
+Matt Brender <mjbrender@gmail.com>
 Matt Landis <landis.matt@gmail.com>
 Maxime Bury <maxime.bury@gmail.com>
 Michael Tiller <michael.tiller@gmail.com>
+Nathan VanBenschoten <nvanbenschoten@gmail.com>
 Neil O'Toole <neilotoole@apache.org>
-Ondrej Kupka <ondra.cap@gmail.com>
+Ondřej Kupka <ondra.cap@gmail.com>
 Panagiotis Moustafellos <pmoust@gmail.com>
 Parker Moore <parkrmoore@gmail.com>
 Pierre Carrier <pierre@meteor.com>
 Piotr Zurek <p.zurek@gmail.com>
 Quinn Slack <qslack@qslack.com>
 Rackspace US, Inc.
+rc1140 <jameel@republiccommandos.co.za>
 Red Hat, Inc.
 Rob Figueiredo <robfig@yext.com>
 Ruben Vereecken <rubenvereecken@gmail.com>
@@ -89,9 +103,12 @@ Stian Eikeland <stian@eikeland.se>
 Thomas Bruyelle <thomas.bruyelle@gmail.com>
 Timothée Peignier <timothee.peignier@tryphon.org>
 Trey Tacon <ttacon@gmail.com>
+ttacon <ttacon@gmail.com>
 Victor Castell <victor@victorcastell.com>
+Victor Vrantchan <vrancean+github@gmail.com>
 William Bailey <mail@williambailey.org.uk>
 Yann Malet <yann.malet@gmail.com>
 Yannick Utard <yannickutard@gmail.com>
 Yicheng Qin <qycqycqycqycqyc@gmail.com>
+Yumikiyo Osanai <yumios.art@gmail.com>
 Zach Latta <zach@zachlatta.com>
