--- a/AUTHORS
+++ b/AUTHORS
@@ -91,6 +91,7 @@ Rackspace US, Inc.
 rc1140 <jameel@republiccommandos.co.za>
 Red Hat, Inc.
 Rob Figueiredo <robfig@yext.com>
+Ronak Jain <ronakjain@outlook.in>
 Ruben Vereecken <rubenvereecken@gmail.com>
 Ryan Lower <rpjlower@gmail.com>
 saisi <saisi@users.noreply.github.com>
