--- a/AUTHORS
+++ b/AUTHORS
@@ -82,6 +82,7 @@ Maxime Bury <maxime.bury@gmail.com>
 Michael Tiller <michael.tiller@gmail.com>
 Nathan VanBenschoten <nvanbenschoten@gmail.com>
 Neil O'Toole <neilotoole@apache.org>
+Nick Miyake <nmiyake@palantir.com>
 Ondřej Kupka <ondra.cap@gmail.com>
 Panagiotis Moustafellos <pmoust@gmail.com>
 Parker Moore <parkrmoore@gmail.com>
