Add Andy Lindeman and Keita Urashima to AUTHORS
Change-Id: I4f93d60f33b42c7e1c0ef0cf57c6a4d57a3c19ba

--- a/AUTHORS
+++ b/AUTHORS
@@ -16,6 +16,7 @@ Alexander Harkness <me@bearbin.net>
 Amey Sakhadeo <me@ameyms.com>
 Andreas Garnæs <https://github.com/andreas>
 Andrew Ryabchun <aryabchun@mail.ua>
+Andy Lindeman <andy@lindeman.io>
 Anshuman Bhartiya <anshuman.bhartiya@gmail.com>
 Arıl Bozoluk <arilbozoluk@hotmail.com>
 Austin Dizzy <dizzy@wow.com>
@@ -66,6 +67,7 @@ John Engelman <john.r.engelman@gmail.com>
 Juan Basso <jrbasso@gmail.com>
 Julien Rostand <jrostand@users.noreply.github.com>
 Justin Abrahms <justin@abrah.ms>
+Keita Urashima <ursm@ursm.jp>
 Konrad Malawski <konrad.malawski@project13.pl>
 Krzysztof Kowalczyk <kkowalczyk@gmail.com>
 kyokomi <kyoko1220adword@gmail.com>
