Add Andy Hume to AUTHORS
Change-Id: Ic750fa04efece4af30ddb86dce3a3567a9a6ceb7

--- a/AUTHORS
+++ b/AUTHORS
@@ -16,6 +16,7 @@ Alexander Harkness <me@bearbin.net>
 Amey Sakhadeo <me@ameyms.com>
 Andreas Garnæs <https://github.com/andreas>
 Andrew Ryabchun <aryabchun@mail.ua>
+Andy Hume <andyhume@gmail.com>
 Andy Lindeman <andy@lindeman.io>
 Anshuman Bhartiya <anshuman.bhartiya@gmail.com>
 Arıl Bozoluk <arilbozoluk@hotmail.com>
