Add isqua to AUTHORS
Change-Id: I1d3969387e077db859a477d9c1061f7741664a19

--- a/AUTHORS
+++ b/AUTHORS
@@ -62,6 +62,7 @@ Hari haran <hariharan.uno@gmail.com>
 Huy Tr <kingbazoka@gmail.com>
 i2bskn <i2bskn@gmail.com>
 Isao Jonas <isao.jonas@gmail.com>
+isqua <isqua@isqua.ru>
 Jameel Haffejee <RC1140@republiccommandos.co.za>
 Jihoon Chung <j.c@navercorp.com>
 Joe Tsai <joetsai@digital-static.net>
