Add huydx to AUTHORS
Change-Id: I4fcfa5a45e37564614b6132e6fa93e164b163e4c

--- a/AUTHORS
+++ b/AUTHORS
@@ -60,6 +60,7 @@ Guz Alexander <kalimatas@gmail.com>
 Hanno Hecker <hanno.hecker@zalando.de>
 Hari haran <hariharan.uno@gmail.com>
 Huy Tr <kingbazoka@gmail.com>
+huydx <doxuanhuy@gmail.com>
 i2bskn <i2bskn@gmail.com>
 Isao Jonas <isao.jonas@gmail.com>
 isqua <isqua@isqua.ru>
