Add Kookheon Kwon to AUTHORS
Change-Id: I3554b845fb5f8f81504b58de9c79749f1fb4af64

--- a/AUTHORS
+++ b/AUTHORS
@@ -75,6 +75,7 @@ Justin Abrahms <justin@abrah.ms>
 jzhoucliqr <jzhou@cliqr.com>
 Keita Urashima <ursm@ursm.jp>
 Konrad Malawski <konrad.malawski@project13.pl>
+Kookheon Kwon <kookheon.kwon@rgpkorea.co.kr>
 Krzysztof Kowalczyk <kkowalczyk@gmail.com>
 kyokomi <kyoko1220adword@gmail.com>
 Lucas Alcantara <lucasalcantaraf@gmail.com>
