--- a/AUTHORS
+++ b/AUTHORS
@@ -75,7 +75,7 @@ Justin Abrahms <justin@abrah.ms>
 jzhoucliqr <jzhou@cliqr.com>
 Keita Urashima <ursm@ursm.jp>
 Konrad Malawski <konrad.malawski@project13.pl>
-Kookheon Kwon <kookheon.kwon@rgpkorea.co.kr>
+Kookheon Kwon <kucuny@gmail.com>
 Krzysztof Kowalczyk <kkowalczyk@gmail.com>
 kyokomi <kyoko1220adword@gmail.com>
 Lucas Alcantara <lucasalcantaraf@gmail.com>
