--- a/AUTHORS
+++ b/AUTHORS
@@ -106,6 +106,7 @@ Rob Figueiredo <robfig@yext.com>
 Ronak Jain <ronakjain@outlook.in>
 Ruben Vereecken <rubenvereecken@gmail.com>
 Ryan Lower <rpjlower@gmail.com>
+Sahil Dua <sahildua2305@gmail.com>
 saisi <saisi@users.noreply.github.com>
 Sander van Harmelen <svanharmelen@schubergphilis.com>
 Sean Wang <sean@decrypted.org>
