Add Abhinav Gupta to AUTHORS
Change-Id: I81895409a242a98c257c8a6dda98c3c3242e0005

--- a/AUTHORS
+++ b/AUTHORS
@@ -8,6 +8,7 @@
 # Authors who wish to be recognized in this file should add themselves (or
 # their employer, as appropriate).
 
+Abhinav Gupta <mail@abhinavg.net>
 Ainsley Chong <ainsley.chong@gmail.com>
 Akeda Bagus <akeda@x-team.com>
 Alec Thomas <alec@swapoff.org>
