Add Gnahz and Sevki to AUTHORS
Change-Id: I4b560f9be464784636c32f54e2fb8f916c825dd0

--- a/AUTHORS
+++ b/AUTHORS
@@ -57,6 +57,7 @@ Francis <hello@francismakes.com>
 Fredrik Jönsson <fredrik.jonsson@izettle.com>
 Garrett Squire <garrettsquire@gmail.com>
 Georgy Buranov <gburanov@gmail.com>
+Gnahz <p@oath.pl>
 Google Inc.
 griffin_stewie <panterathefamilyguy@gmail.com>
 Guz Alexander <kalimatas@gmail.com>
@@ -114,6 +115,7 @@ Sahil Dua <sahildua2305@gmail.com>
 saisi <saisi@users.noreply.github.com>
 Sander van Harmelen <svanharmelen@schubergphilis.com>
 Sean Wang <sean@decrypted.org>
+Sevki <s@sevki.org>
 Shawn Smith <shawnpsmith@gmail.com>
 sona-tar <sona.zip@gmail.com>
 SoundCloud, Ltd.
