--- a/AUTHORS
+++ b/AUTHORS
@@ -69,6 +69,7 @@ i2bskn <i2bskn@gmail.com>
 Isao Jonas <isao.jonas@gmail.com>
 isqua <isqua@isqua.ru>
 Jameel Haffejee <RC1140@republiccommandos.co.za>
+Jeremy Morris <jeremylevanmorris@gmail.com>
 Jihoon Chung <j.c@navercorp.com>
 Joe Tsai <joetsai@digital-static.net>
 John Engelman <john.r.engelman@gmail.com>
