Added support for Dismissed Review (#827)
This commit simply adds support for a dismissed_review issue event. I
have added a new struct type called DismissedReview. Additional to this
I have added this type as a a field against the IssueEvent.

Example: `IssueEvent.DismissedReview`

--- a/AUTHORS
+++ b/AUTHORS
@@ -154,6 +154,7 @@ Sebastian Mæland Pedersen <sem.pedersen@stud.uis.no>
 Sevki <s@sevki.org>
 Shawn Catanzarite <me@shawncatz.com>
 Shawn Smith <shawnpsmith@gmail.com>
+Simon Fletcher <simonfletcher0@gmail.com>
 sona-tar <sona.zip@gmail.com>
 SoundCloud, Ltd.
 Stian Eikeland <stian@eikeland.se>
