--- a/AUTHORS
+++ b/AUTHORS
@@ -215,6 +215,7 @@ Timothée Peignier <timothee.peignier@tryphon.org>
 Trey Tacon <ttacon@gmail.com>
 ttacon <ttacon@gmail.com>
 Varadarajan Aravamudhan <varadaraajan@gmail.com>
+Vaibhav Singh <singh.vaibhav2011@gmail.com>
 Victor Castell <victor@victorcastell.com>
 Victor Vrantchan <vrancean+github@gmail.com>
 Vlad Ungureanu <vladu@palantir.com>
