Update AUTHORS with recent contributors

--- a/AUTHORS
+++ b/AUTHORS
@@ -48,6 +48,7 @@ Brian Egizi <brian@mojotech.com>
 Bryan Boreham <bryan@weave.works>
 Cami Diez <diezcami@gmail.com>
 Carlos Alexandro Becker <caarlos0@gmail.com>
+Carlos Tadeu Panato Junior <ctadeu@gmail.com>
 chandresh-pancholi <chandreshpancholi007@gmail.com>
 Charles Fenwick Elliott <Charles@FenwickElliott.io>
 Charlie Yan <charlieyan08@gmail.com>
@@ -158,6 +159,7 @@ Maxime Bury <maxime.bury@gmail.com>
 Michael Spiegel <michael.m.spiegel@gmail.com>
 Michael Tiller <michael.tiller@gmail.com>
 Michał Glapa <michal.glapa@gmail.com>
+Nadav Kaner <nadavkaner1@gmail.com>
 Nathan VanBenschoten <nvanbenschoten@gmail.com>
 Navaneeth Suresh <navaneeths1998@gmail.com>
 Neil O'Toole <neilotoole@apache.org>
