--- a/AUTHORS
+++ b/AUTHORS
@@ -27,6 +27,7 @@ Andrew Ryabchun <aryabchun@mail.ua>
 Andy Grunwald <andygrunwald@gmail.com>
 Andy Hume <andyhume@gmail.com>
 Andy Lindeman <andy@lindeman.io>
+anjanashenoy <anjanashenoy1@gmail.com>
 Anshuman Bhartiya <anshuman.bhartiya@gmail.com>
 Antoine <antoine.tu@mail.mcgill.ca>
 Antoine Pelisse <apelisse@gmail.com>
@@ -152,6 +153,7 @@ Luke Kysow <lkysow@gmail.com>
 Luke Roberts <email@luke-roberts.co.uk>
 Luke Young <luke@hydrantlabs.org>
 Maksim Zhylinski <uzzable@gmail.com>
+Mark Tareshawty <tarebyte@github.com>
 Martin-Louis Bright <mlbright@gmail.com>
 Marwan Sulaiman <marwan.sameer@gmail.com>
 Mat Geist <matgeist@gmail.com>
