Add accept header to get member repository creation type

--- a/AUTHORS
+++ b/AUTHORS
@@ -70,6 +70,7 @@ Dave Du Cros <davidducros@gmail.com>
 Dave Henderson <dhenderson@gmail.com>
 David Deng <daviddengcn@gmail.com>
 David Jannotta <djannotta@gmail.com>
+David Ji <github.com/davidji99>
 Davide Zipeto <dawez1@gmail.com>
 Dennis Webb <dennis@bluesentryit.com>
 Dhi Aurrahman <diorahman@rockybars.com>
